@startuml FactoryMethod
title Factory Method
header a.k.a. Virtual Constructor
!theme amiga

interface Product
class ProductA implements Product
class ProductB implements Product

abstract class FactoryBase {
  + {abstract} Product createProduct()
}

class FactoryA extends FactoryBase {
  + Product createProduct()
}

class FactoryB extends FactoryBase {
  + Product createProduct()
}

FactoryBase --> Product
FactoryA --> ProductA
FactoryB --> ProductB

@enduml